--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
   "author": "knowSpring <1521644128@qq.com>",
   "license": "MIT",
   "devDependencies": {
+    "@vuepress/plugin-back-to-top": "^1.7.1",
+    "@vuepress/plugin-medium-zoom": "^1.7.1",
+    "@vuepress/plugin-pwa": "^1.7.1",
     "vuepress": "^1.7.1",
-    "vuepress-plugin-auto-sidebar": "^1.5.0"
+    "vuepress-plugin-auto-sidebar": "^1.5.0",
+    "vuepress-plugin-meting": "^0.1.1",
+    "vuepress-theme-reco": "^1.5.7"
   },
   "scripts": {
     "docs:dev": "vuepress dev docs",
@@ -16,7 +21,15 @@
     "deploy": "bash deploy.sh"
   },
   "dependencies": {
+    "@vssue/api-github-v4": "^1.4.0",
+    "@vssue/vuepress-plugin-vssue": "^1.4.6",
+    "@vuepress-reco/vuepress-plugin-kan-ban-niang": "^1.0.5",
+    "countup.js": "^2.0.7",
     "moment": "^2.29.1",
-    "monent": "^2.0.0"
+    "monent": "^2.0.0",
+    "vuepress-plugin-dynamic-title": "^1.0.0",
+    "vuepress-plugin-flowchart": "^1.4.3",
+    "vuepress-plugin-nuggets-style-copy": "^1.0.3",
+    "vuepress-plugin-sitemap": "^2.3.1"
   }
 }
